# pokerapp

./: .gitignore  Makefile  docker-compose.yml
backend/: .gitignore  Makefile  README.md  api.Dockerfile  backend.py  config.py  pyproject.toml  pyrightconfig.json  tests.py
backend/app/: __init__.py  models.py  mq.py  tasks.py
backend/app/auth/: __init__.py  views.py
backend/app/errors/: __init__.py  handlers.py
backend/app/main/: __init__.py  sockets.py  views.py
backend/gameplay/: .gitignore  client_sample.py  deck.py  hand.py  pyproject.toml  schemas.py
backend/migrations/versions/: 4652e990650a_users_table.py  c064605eed64_tables.py
frontend/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json  ui.Dockerfile
frontend/cypress/: tsconfig.json
frontend/cypress/fixtures/: fixtures.ts
frontend/cypress/integration/: table.spec.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: data.js  mockFlop.js  mockPreflop.js  receive.js  socket.js
frontend/src/apis/: act.ts  api.ts  apiClient.ts  mockSockets.ts  socket.ts  useSockets.ts
frontend/src/components/: Root.js
frontend/src/hooks/: useLocalStorage.ts
frontend/src/models/: card.ts  events.ts  game.ts
frontend/src/schemas/: events.ts  index.ts
frontend/src/style/: variables.style.ts
frontend/src/types/: index.tsx
frontend/src/utils/: asserts.ts  notifications.ts  typeGuards.ts
gameplay/: Makefile  card.py  combos.py  gameplay.Dockerfile  start_server.py  utils.py
gameplay/tests/: test_deck.py  test_hand.py  test_rankings.py
(+19 files in other folders)
