[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["valerii <valeriykundas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
flask = "^1.1.2"
requests = "^2.23.0"
simplejson = "^3.17.0"
flask_cors = "^3.0.8"
flask_socketio = "^4.3.0"
mongoengine = "^0.20.0"
pika = "^1.1.0"
Flask-SQLAlchemy = "^2.4.1"
flask-socketio = "^4.3.0"
flask-migrate = "^2.5.3"
flask-login = "^0.5.0"
psycopg2 = "^2.8.5"
eventlet = "^0.25.2"
celery = "^4.4.6"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.770"
bandit = "^1.6.2"
ipdb = "^0.13.2"
python-dotenv = "^0.13.0"
pytest-flask = "^1.0.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
