[tool.poetry]
name = "gameplay"
version = "0.1.0"
description = ""
authors = ["valerii <valeriykundas@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pika = "^1.1.0"
requests = "^2.23.0"
celery = "^4.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
